Update and rename ramsa_max.html to ramsa_max/index.html

--- a/ramsa_max/index.html
+++ b/ramsa_max/index.html
@@ -85,9 +85,9 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="/">Home</a>
+    <a href="/about.">About</a>
+    <a href="mailto:wyatt@wyattsucks.org">Contact</a>
 </nav>
 
 <main>
@@ -103,7 +103,7 @@
                 <li>Install the software</li>
             </ul>
         <h4>Making sure you have the correct compatibility settings</h4>
-        <h6><i>Note: If you would rather use a VM (virtual machine), I have a tutorial on that</i> <a href="/windows98_VM.html">here</a><i>.</i></h6>
+        <h6><i>Note: If you would rather use a VM (virtual machine), I have a tutorial on that</i> <a href="/windows98_VM">here</a><i>.</i></h6>
             <ul>
                 <li>Open the folder created by unzipping the downloaded file (usually called ramsa_software).</li>
                 <li> Right-click on "installer.EXE" and select the "Properties" menu.</li>
