--- a/404/index.html
+++ b/404/index.html
@@ -85,7 +85,7 @@
 <main>
     <h1>404</h1>
     <h3>File not found :(</h3>
-    <p>The file that you are looking for is either under construction or does not exist. If you think this happened by mistake, you can email me at <a href = "mailto:wyatt@wyattsucks.org">iMacWeirdo@outlook.com</a>. If you would like to go to the main page click <a href = "/">here</a>.</p>
+    <p>The file that you are looking for is either under construction or does not exist. If you think this happened by mistake, you can email me at <a href = "mailto:wyatt@wyattsucks.org">wyatt@wyattsucks.org</a>. If you would like to go to the main page click <a href = "/">here</a>.</p>
     <p>  </p>
     <p>  </p>
     <br></br>
