--- a/youlikeboys/index.html
+++ b/youlikeboys/index.html
@@ -76,14 +76,14 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="mailto:wyatt@wyattsucks.org">Contact</a>
 </nav>
 
 <main>
     <h1>YOU LIKE BOYS?</h1>
-    <h1><a href="/JerryBackendPass.html">Back</a></h1>
+    <h1><a href="/JerryBackendPass">Back</a></h1>
     
     <p>  </p>
     <p>  </p>
@@ -97,7 +97,7 @@
     <script>
         function allowAccess() {
             sessionStorage.setItem("canAccessStageTwoDogMonkey", "true");
-            window.location.href = "/StageTwoDogMonkey.html";
+            window.location.href = "/StageTwoDogMonkey";
         }
 
         let typed = "";
@@ -107,7 +107,7 @@
 
             if (typed === "dogmonkey") {
                 sessionStorage.setItem("canAccessStageTwoDogMonkey", "true");
-                window.location.href = "/StageTwoDogMonkey.html";
+                window.location.href = "/StageTwoDogMonkey";
             }
 
             if (typed.length > 25) {
