--- a/JerryBackendPass/index.html
+++ b/JerryBackendPass/index.html
@@ -149,7 +149,7 @@
             snake.unshift(head);
 
             if (snake.length > 6) {
-                window.location.href = 'backendpass_dog_monkey';
+                window.location.href = '/backendpass_dog_monkey';
                 return;
             }
 
