--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify Logo">
         <a href="https://open.spotify.com/user/31hf2sqn4lioaz6xvb3bdmr66pqm">Follow Me on Spotify!</a>
     </div>
+        <!-- Custom YouTube Channel Card -->
+    <div class="card" style="background-color: #FF0000;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube Logo">
+        <a href="https://www.youtube.com/@wyattsucks-org" target="_blank">View my YouTube Chanel!</a>
+    </div>
 
 </main>
 
