--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 
     <!-- Custom Spotify Account Card -->
     <div class="card">
-        <img src="/resources/spotify.png" alt="Spotify Logo">
+        <img src="/Resources/spotify.png" alt="Spotify Logo">
         <a href="https://open.spotify.com/user/31hf2sqn4lioaz6xvb3bdmr66pqm">Follow Me on Spotify!</a>
     </div>
         <!-- Custom YouTube Channel Card -->
     <div class="card" style="background-color: #FF0000;">
-        <img src="/resources/youtube.png" alt="YouTube Logo">
+        <img src="/Resources/youtube.png" alt="YouTube Logo">
         <a href="https://www.youtube.com/@wyattsucks-org" target="_blank">View my YouTube Chanel!</a>
     </div>
 
