--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </tr>
         </tbody>
     </table>
-
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/16GoqUFY6zKHS8BNpiy14x?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <!-- Custom Spotify Account Card -->
     <div class="card">
         <img src="/Resources/spotify.png" alt="Spotify Logo">
