--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@
             font-size: 20px;
             text-decoration: none;
         }
+        .dropdown {
+            margin-top: 20px;
+        }
+        .dropdown-content {
+            display: none;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+        .dropdown-content iframe {
+            border-radius: 0;
+        }
+        .button {
+            background-color: #1DB954;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .button:hover {
+            background-color: #14833b;
+        }
     </style>
 </head>
 <body>
@@ -130,7 +155,12 @@
         </tbody>
     </table>
     <br>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/16GoqUFY6zKHS8BNpiy14x?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div class="dropdown">
+    <button class="button" onclick="toggleDropdown()">Show/Hide Spotify Playlist</button>
+    <div class="dropdown-content">
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/16GoqUFY6zKHS8BNpiy14x?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+</div>
     <!-- Custom Spotify Account Card -->
     <div class="card">
         <img src="/Resources/spotify.png" alt="Spotify Logo">
