--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
             padding: 10px 0;
             text-align: center;
         }
+        footer {
+            background-color: #003366;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+            z-index: 1; /* Lower z-index to ensure footer is below chat button */
+        }
         nav {
             display: flex;
             justify-content: center;
@@ -200,6 +210,7 @@
             cursor: pointer;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s;
+            z-index: 1000; /* Ensure it appears above other elements */
         }
         .chat-button:hover {
             transform: scale(1.1);
