--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
             <tr>
                 <td><em><a href="/JERRY">JERRY</em></td>
                 <td><em>JERRY</em></td>
-                <td><em>JERRY</em></td>
+                <td><em><i>~ 12/1/2024</i></em></td>
+            </tr>
+            <tr>
+                <td><em><a href="https://kraaitech.org/">Kraai Technology Services</a></em></td>
+                <td><em><a href="https://kraaitech.org">KraaiTech.org</a> is another acquisition of mine for my technology business (starting an LLC within the next year).</em></td>
+                <td><em>4/22/2025</em></td>
             </tr>
         </tbody>
     </table>
