--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <button onclick="closeChat()">X</button>
         </div>
         <div class="chat-content">
-            <p>Fun fact: this website is asexually owned!</p>
+            <p>This website is a demonstration for <a href="https://kraaitech.org">KraaiTech.org</a>.</p>
         </div>
     </div>
 
@@ -204,7 +204,7 @@
             width: 60px;
             height: 60px;
             background-color: white;
-            border: 5px solid purple; /* Purple outline */
+            border: 5px solid green; /* Green outline */
             border-radius: 50%; /* Circular button */
             display: flex;
             align-items: center;
@@ -237,7 +237,7 @@
             border-radius: 8px;
         }
         .chat-header {
-            background-color: purple;
+            background-color: green;
             color: white;
             padding: 10px;
             border-radius: 8px 8px 0 0;
