--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <br>
         <!-- Circular Chat Button -->
     <div class="chat-button" onclick="openChat()">
-        <img src="/Resources/ace.png" alt="Asexual Flag" />
+        <img src="/Resources/k.png" alt="Asexual Flag" />
     </div>
 
     <!-- Chat Box -->
