--- a/windows98_VM/index.html
+++ b/windows98_VM/index.html
@@ -1,1 +1,2 @@
+<link rel="icon" type="image/png" href="/Resources/w.png" />
 <p>Sorry, this site is under construction. :( <a href="/"> Go Home</a></p>
