--- a/windows98_VM/index.html
+++ b/windows98_VM/index.html
@@ -1,2 +1,11 @@
-<link rel="icon" type="image/png" href="/Resources/w.png" />
-<p>Sorry, this site is under construction. :( <a href="/"> Go Home</a></p>
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Site Under Construction</title>
+      <link rel="icon" type="image/png" href="/Resources/w.png" />
+    </head>
+    <body>
+      <div style="border: 3px solid #4991C5; font:1.5em; font-family:tahoma,calibri,arial; font-weight:bold; color:#0A4369; padding:5px; margin:10px; text-align:center">Sorry, this site is under construction. :( <a href="/"> Go Home</a></div>
+    </body>
+  </html>
+  
