--- a/index.html
+++ b/index.html
@@ -149,9 +149,14 @@
         </thead>
         <tbody>
             <tr>
-                <td><em><a href="/windows98_VM">Windows 98 Virtual Machine</a></em></td>
-                <td><em>A step-by-step guide in creating a Windows 98 virtual machine (helpful for my <a href="/ramsa_max">Ramsa Max Project</a>).</em></td>
-                <td><em>11/8/2024</em></td>
+                <td><a href="https://docs.google.com/document/d/1OeBxvXvID_B2UAgZoq3UBVzzKqxo2pCmwPqFSYZOQGk/edit?usp=sharing">I'm Done</a></td>
+                <td>You'll only see this if you need to</td>
+                <td>5/1/2025</td>
+            </tr>
+            <tr>
+                <td><a href="/windows98_VM">Windows 98 Virtual Machine</a></td>
+                <td>A step-by-step guide in creating a Windows 98 virtual machine (helpful for my <a href="/ramsa_max">Ramsa Max Project</a>).</td>
+                <td>11/8/2024</td>
             </tr>
             <tr>
                 <td><a href="/ramsa_max">Ramsa MAX Software</a></td>
