--- a/index.html
+++ b/index.html
@@ -154,24 +154,24 @@
                 <td>5/1/2025</td>
             </tr>
             <tr>
+                <td><a href="https://kraaitech.org/">Kraai Technology Services</a></td>
+                <td><a href="https://kraaitech.org">KraaiTech.org</a> is another acquisition of mine for my technology business (starting an LLC within the next year).</td>
+                <td>4/22/2025</td>
+            </tr>
+            <tr>
                 <td><a href="/windows98_VM">Windows 98 Virtual Machine</a></td>
                 <td>A step-by-step guide in creating a Windows 98 virtual machine (helpful for my <a href="/ramsa_max">Ramsa Max Project</a>).</td>
                 <td>11/8/2024</td>
             </tr>
             <tr>
+                <td><a href="/JERRY">JERRY</td>
+                <td>JERRY</td>
+                <td><i>~ 12/1/2024</i></td>
+            </tr>
+            <tr>
                 <td><a href="/ramsa_max">Ramsa MAX Software</a></td>
                 <td>The seemingly disappeared 1990s software is now available, once again!</td>
                 <td>11/6/2024</td>
-            </tr>
-            <tr>
-                <td><em><a href="/JERRY">JERRY</em></td>
-                <td><em>JERRY</em></td>
-                <td><em><i>~ 12/1/2024</i></em></td>
-            </tr>
-            <tr>
-                <td><em><a href="https://kraaitech.org/">Kraai Technology Services</a></em></td>
-                <td><em><a href="https://kraaitech.org">KraaiTech.org</a> is another acquisition of mine for my technology business (starting an LLC within the next year).</em></td>
-                <td><em>4/22/2025</em></td>
             </tr>
         </tbody>
     </table>
