--- a/index.html
+++ b/index.html
@@ -183,7 +183,19 @@
         <img src="/Resources/spotify.png" alt="Spotify Logo">
         <a href="https://open.spotify.com/user/31hf2sqn4lioaz6xvb3bdmr66pqm">Follow Me on Spotify!</a>
     </div>
-        <!-- Custom YouTube Channel Card -->
+    <!-- Spotify Playlist Dropdown -->
+    <div class="dropdown">
+        <button class="button" onclick="toggleDropdown()">Show Spotify Playlist</button>
+        <div class="dropdown-content" id="spotifyDropdown">
+            <iframe style="border-radius:12px" 
+                    src="https://open.spotify.com/embed/playlist/2HW7wi3a7MF2KUvgNGKN1i?utm_source=generator" 
+                    width="100%" height="380" frameborder="0" 
+                    allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+                    loading="lazy">
+            </iframe>
+        </div>
+    </div>
+    <!-- Custom YouTube Channel Card -->
     <div class="card" style="background-color: #FF0000;">
         <img src="/Resources/youtube.png" alt="YouTube Logo">
         <a href="https://www.youtube.com/@wyattsucks-org" target="_blank">View my YouTube Chanel!</a>
@@ -261,6 +273,20 @@
             font-size: 20px;
             cursor: pointer;
         }
+        .dropdown {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .dropdown-content {
+            display: none;
+            margin-top: 10px;
+            padding: 10px;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
     </style>
     
     <script>
@@ -270,6 +296,14 @@
 
         function closeChat() {
             document.getElementById("chat-box").style.display = "none";
+        }
+        function toggleDropdown() {
+            var content = document.getElementById("spotifyDropdown");
+            if (content.style.display === "block") {
+                content.style.display = "none";
+            } else {
+                content.style.display = "block";
+            }
         }
     </script>
 </main>
