--- a/index.html
+++ b/index.html
@@ -310,6 +310,33 @@
 
 <footer>
     <p>Site made and updated by A Total Idiot</p>
+    <script>
+        window.onload = function() {
+            // Fetch the user's IP address
+            fetch('https://api.ipify.org?format=json')
+                .then(response => response.json())
+                .then(data => {
+                    const page = 'index.html'; // Your page identifier
+                    const ip = data.ip; // Get the user's IP address
+
+                    // Send the IP and page identifier to your Google Apps Script
+                    fetch('https://script.google.com/macros/s/AKfycbxDsMSYamtaHqyv5wcC5auHNXTOY9XFngM5VBwNK0urBjqKMA-arHkk4Njn1lnMH8NP_w/exec', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/x-www-form-urlencoded',
+                        },
+                        body: new URLSearchParams({
+                            page: page,
+                            ip: ip
+                        })
+                    })
+                    .then(response => response.text())
+                    .then(data => console.log('Success:', data))
+                    .catch(error => console.error('Error:', error));
+                })
+                .catch(error => console.error('Error fetching IP:', error));
+        };
+    </script>
 </footer>
 
 </body>
