--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
         </thead>
         <tbody>
             <tr>
+                <td><a href="https://minecraft.wyattsucks.org">Minecraft</a></td>
+                <td>WyattSucks - Minecraft</td>
+                <td>5/7/2025</td>
+            </tr>
+            <tr>
                 <td><a href="https://docs.google.com/document/d/1OeBxvXvID_B2UAgZoq3UBVzzKqxo2pCmwPqFSYZOQGk/edit?usp=sharing">I'm Done</a></td>
                 <td>You'll only see this if you need to</td>
                 <td>5/1/2025</td>
